Client Policy Security Hardening